--- a/tacotorch/Cargo.toml
+++ b/tacotorch/Cargo.toml
@@ -4,3 +4,8 @@ edition = "2021"
 version.workspace = true
 
 [dependencies]
+anyhow = "1.0.89"
+rumqttc = "0.24.0"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync"] }
